tests/compile-fail/integration__integration__type_check__diffswitch.snap
---
source: tests/integration/type_check.rs
expression: stderr
---
error: type error
   ┌─ <input>:11:20
   │
11 │         int x = 3::4.5:;               // arg
   │                 ---^^^-
   │                 │  │
   │                 │  a float
   │                 same types required by this
   │                 an integer

error: type error
   ┌─ <input>:12:19
   │
12 │         float a = 3:4::4;              // out
   │         -----     ^^^^^^ an integer
   │         │          
   │         expects a float

error: type error
   ┌─ <input>:13:17
   │
13 │         int y = ins_0():::;            // void expr
   │                 ^^^^^^^---
   │                 │
   │                 expects a value
   │                 void type

error: type error
   ┌─ <input>:14:32
   │
14 │         int z = (3.0:4.0:3.0 + 1:5.0); // interior
   │                          --- - ^ an integer
   │                          │   │  
   │                          │   same types required by this
   │                          a float

error: type error
   ┌─ <input>:15:10
   │
15 │         (ins_0():::);                  // void stmt
   │         -^^^^^^^----
   │         ││
   │         │void type
   │         expects a value


